# tmux-sidecar

./: ARCHITECTURE.md  Cargo.toml  DESIGN.md  LICENSE  PLAN.md  README.md  RESEARCH.md
src/: app.rs  cli.rs  client.rs  event.rs  input.rs  ipc.rs  lib.rs  main.rs  model.rs  projection.rs  query.rs  server.rs  state_cache.rs
src/domain/: mod.rs  rows.rs  state.rs
src/tmux/: command.rs  hooks.rs  mod.rs  parse.rs  snapshot.rs
src/ui/: help.rs  mod.rs  theme.rs  tree.rs
src/ui_app/: mod.rs  runtime.rs
tests/: domain_state.rs  hooks_integration.rs  linked_window_alerts_integration.rs  startup_hardening_integration.rs  tmux_snapshot_integration.rs  workflows_integration.rs
