[package]
name = "tmux-sidecar"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
crossterm = "0.29.0"
ratatui = "0.30.0"
thiserror = "2.0.18"

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.3"
serial_test = "3.2.0"
tempfile = "3.16.0"
